Agregando distancia desde casa dominga a los lugares del home

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -64,7 +64,7 @@
                             <img class="foto" [src]="item.imagenPrincipal" [alt]="item.nombre" />
                             <div>
                                 <div class="distancia">
-                                    <ion-label slot="start">100 metros</ion-label>
+                                    <ion-label slot="start">{{item.distancia}}</ion-label>
                                 </div>
                                 <div class="valoracion">
                                     <ion-icon class="estrella" name="star"></ion-icon>
