--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -55,6 +55,11 @@ ion-label {
     text-align: left;
 }
 
+.nomb{
+    text-align: left;
+    font-family: 'Barlow';
+}
+
 .padre {
     height: 100%;
 }
