--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -8,7 +8,13 @@ ion-avatar>img {
     border-radius: 15% !important;
     height: 100%;
     width: 100%;
-    border: 0.5px solid black;
+}
+
+ion-avatar{
+    -webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    margin-left: 4px;
 }
 
 ion-item {
@@ -21,7 +27,7 @@ ion-img {
 }
 
 ion-title {
-    color: #B3B0B0;
+    color: #fff;
     font-weight: 700;
 }
 
@@ -58,8 +64,3 @@ span {
     width: 75%;
     margin-left: 5%;
 }
-
-// .infoAbajo {
-//     bottom: 0;
-//     position: relative;
-// }
