--- a/src/app/pages/urban-circuit/urban-circuit.page.html
+++ b/src/app/pages/urban-circuit/urban-circuit.page.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar color="circuits">
+        <ion-buttons slot="start">
+            <ion-back-button color="back"></ion-back-button>
+        </ion-buttons>
         <ion-title>Circuito Urbano</ion-title>
     </ion-toolbar>
 </ion-header>
