--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -40,12 +40,17 @@ ion-label {
 }
 
 .cardTitle ion-inherit-color .md .hydrated {
-    
+
     font-size: 150%;
 }
 
 .iconTitle {
-    float: right;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-right: 5%;
+    font-size: 130%;
+    color: #fff;
 }
 
 .categoria {
@@ -55,9 +60,14 @@ ion-label {
     text-align: left;
 }
 
-.nomb{
-    text-align: left;
+.nomb {
     font-family: 'Barlow';
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-left: 5%;
+    font-size: 130%;
+    color: #fff;
+    font-weight: bold;
 }
 
 .padre {
@@ -70,7 +80,7 @@ ion-label {
 }
 
 .menu {
-    margin: 1.5% 5% 1.5% 5%;
+    margin: 1.5% 5% 4.5% 5%;
     height: 10%;
     //border: 1px solid black;
 }
@@ -84,7 +94,8 @@ ion-label {
 }
 
 .cards {
-    height: 42%;
+    height: 36%;
+    margin-bottom: 3%;
     //border: 1px solid black;
 }
 
@@ -95,7 +106,7 @@ ion-card {
 
 ion-card {
     img {
-        height: 25vh !important;
+        height: 20vh !important;
         width: 100% !important;
         max-width: 100%;
         align-items: center;
@@ -114,8 +125,71 @@ ion-card {
     padding: 0;
 }
 
-.sliderPrimero, .sliderHijo, .imgSlider{
+.sliderPrimero,
+.sliderHijo,
+.imgSlider {
     height: 100%;
     width: 100%;
 }
 
+.cpadre {
+    height: 90%;
+    width: 100%;
+    margin-left: 8%;
+    margin-right: 8%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    -webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+}
+
+// .chead, .ccontent, .cfooter{
+//     border: 1px solid black;
+// }
+
+.chead {
+    height: 25%;
+    background-color: #10dda6;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    //padding: 8%;
+    display: flex;
+    flex-direction: row;
+}
+
+.ccontent {
+    height: 60%;
+}
+
+.cfooter {
+    height: 15%;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    display: flex;
+    flex-direction: row;
+}
+
+.ccontent {
+    .foto {
+        width: 100%;
+    }
+}
+
+.valoracion {
+    margin-left: auto;
+    font-size: 80%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.distancia{
+    font-size: 80%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
