--- a/src/app/pages/rural-circuit/rural-circuit.page.html
+++ b/src/app/pages/rural-circuit/rural-circuit.page.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar color="circuits">
+        <ion-buttons slot="start">
+            <ion-back-button color="back"></ion-back-button>
+        </ion-buttons>
         <ion-title>Circuito Rural</ion-title>
     </ion-toolbar>
 </ion-header>
@@ -7,5 +10,4 @@
     <div id="contenedor">
         <div id="mapaBox"></div>
     </div>
-    
 </ion-content>
