--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="home" color="back"></ion-back-button>
         </ion-buttons>
-        <ion-icon class="icon-info" slot="end" name="information-outline"></ion-icon>
+        <ion-img src="/assets/icon/info.png" class="iconInfo" slot="end"></ion-img>
     </ion-toolbar>
 </ion-header>
 <ion-content>
