--- a/src/app/pages/information/information.page.scss
+++ b/src/app/pages/information/information.page.scss
@@ -5,10 +5,10 @@
     margin-bottom: 2px;
 }
 
-.icon-info {
+.iconInfo {
     color: #fff;
-    font-size: 250%;
-    margin-right: 6%;
+    width: 12%;
+    margin-right: 8%;
 }
 
 .item-accordion {
