--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -130,6 +130,10 @@ ion-title {
     margin-left: auto;
 }
 
+#fav{
+    font-size: 150%;
+}
+
 @media only screen and (min-width: 768px) {
     .interes {
         margin: 2% 0 2% 0;
