--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,4 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+@import "~@fortawesome/fontawesome-free/css/all.css";
