--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -8,5 +8,10 @@
 </ion-header>
 
 <ion-content>
-{{ descripcion }}
+	<ion-text>
+		<div class="texto">
+			{{ descripcion }}
+		</div>
+		
+	</ion-text>
 </ion-content>
