--- a/src/app/pages/more-options/more-options.page.scss
+++ b/src/app/pages/more-options/more-options.page.scss
@@ -2,21 +2,74 @@
     --box-shadow: none !important;
 }
 
-  .icon-options{
-  	color: #fff;
-  	font-size: 200%;
-  }
-
-  .text{
-  	margin-left: 5%;
-  	font-weight: 600;
+.text {
+    margin-left: 5%;
+    font-weight: 600;
     color: #A6A6A6;
-  }
-
-ion-grid, ion-searchbar{
-	margin-left: 4% !important;
 }
 
-.hrefIcon{
-  text-decoration: none;
+ion-grid,
+ion-searchbar {
+    margin-left: 4% !important;
+}
+
+.hrefIcon {
+    text-decoration: none;
+}
+
+ion-avatar,
+ion-avatar>img {
+    border-radius: 15% !important;
+    height: 100%;
+    width: 100%;
+}
+
+ion-avatar {
+    -webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+    margin-left: 4px;
+}
+
+ion-item {
+    margin-top: 4%;
+}
+
+h2 {
+    font-weight: 700;
+    color: #9A9A9A;
+}
+
+h3 {
+    font-weight: bold;
+    color: #000000;
+    font-size: 80%;
+}
+
+span {
+    font-weight: bold;
+    color: #000000;
+    font-size: 90%;
+}
+
+.padre {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    margin: 3% 0 3% 0;
+}
+
+.imagen {
+    width: 25%;
+}
+
+.info {
+    width: 75%;
+    margin-left: 5%;
+}
+
+.infoAbajo {
+    bottom: 0;
+    position: relative;
 }
