--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
   	<ion-buttons slot="start">
-            <ion-back-button defaultHref="home" color="primary"></ion-back-button>
+            <ion-back-button defaultHref="home" color="back"></ion-back-button>
         </ion-buttons>
     <ion-title>{{ nombre }}</ion-title>
   </ion-toolbar>
