--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -42,8 +42,8 @@
                     {{ obsDistancia$ | async }}
                 </div>
                 <div class="estrellas">
-                    <ion-rating [rate]="totalValoracion" readonly="true" size="small">
-                    </ion-rating>
+                    <!-- <ion-rating [rate]="totalValoracion" readonly="true" size="small">
+                    </ion-rating> -->
                 </div>
             </div>
             <p class="text">{{descripcion}}<a class="verMas" [routerLink]="['/descripcion', key]">Ver más</a></p>
