--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -42,6 +42,7 @@
                     {{ obsDistancia$ | async }}
                 </div>
                 <div class="estrellas">
+                    <app-rating [(rating)]="totalValoracion"></app-rating>
                     <!-- <ion-rating [rate]="totalValoracion" readonly="true" size="small">
                     </ion-rating> -->
                 </div>
