--- a/src/app/pages/modal-rating/modal-rating.page.html
+++ b/src/app/pages/modal-rating/modal-rating.page.html
@@ -17,14 +17,14 @@
             <ion-card-subtitle>{{ tipo }}</ion-card-subtitle>
             <ion-card-title>{{ nombre }}</ion-card-title>
           </ion-card-header>
-          <ion-card-content>
+          <!-- <ion-card-content>
             {{ descripcion }}
-          </ion-card-content>
+          </ion-card-content> -->
         </ion-card>
         
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row class="valorar">
       <ion-col> Valorar lugar: </ion-col>
         <ion-col>            
         <app-rating [(rating)]="rating" (click)="puntuacion(rating)"></app-rating>
@@ -32,10 +32,10 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button (click)="closeModal()">Cancelar</ion-button>
+        <ion-button (click)="closeModal()" expand="full">Cancelar</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button (click)="valorarModal()">Valorar</ion-button>
+        <ion-button (click)="valorarModal()" expand="full">Valorar</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
