--- a/src/global.scss
+++ b/src/global.scss
@@ -27,3 +27,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 @import "~@fortawesome/fontawesome-free/css/all.css";
+
+.personalizar-modal .modal-wrapper {
+   height: 72%;
+   display: block; 
+   margin-left: 4%;
+   margin-right: 4%;
+}
