--- a/src/app/components/rating/rating.component.html
+++ b/src/app/components/rating/rating.component.html
@@ -1,6 +1,6 @@
 <div>
   
   <ion-icon name="star-outline" *ngFor="let num of [1,2,3,4,5]"
-  (click)="rate(num)" [ngStyle]="{'color':getColor(num)}">
+  (click)="rate(num)" [ngStyle]="{'color':getColor(num), 'font-size.px':getSize()}">
 </ion-icon>
 </div>
