--- a/src/app/pages/information/information.page.scss
+++ b/src/app/pages/information/information.page.scss
@@ -18,7 +18,6 @@
 }
 
 .item-accordion-children {
-    background-color: grey !important;
     border-radius: 8px;
     margin: 0 2% 0 5%;
     width: 80%;
@@ -56,5 +55,11 @@
 
 .children-content{
 	margin-bottom: 7%;
+}
+
+.lugares{
+    font-size: 80%;
+    margin: 0 2% 0 15%;
+    font-weight: 300;
 }
 
