--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -69,3 +69,17 @@ span {
     bottom: 0;
     position: relative;
 }
+
+.img-elem{
+    width: 100%;
+    border-radius: 15%;
+    margin: 0px;
+}
+
+.lista{
+    height: 100%;
+}
+
+.item{
+    height: 115px;
+}
