--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 <ion-content>
 	<ion-searchbar cancelButtonText="Custom Cancel" placeholder="" (ionChange)="buscar($event)"></ion-searchbar>
-    <ion-list>
+    <!-- <ion-list>
         <ion-item *ngFor="let item of sleep | filtroDondeDormir:textoBuscar">
             <div class="padre">
                 <div class="imagen">
@@ -27,6 +27,27 @@
                     </ion-label>
                 </div>
             </div>
+        </ion-item>        
+    </ion-list> -->
+
+    <ion-virtual-scroll [items]="sleep | filtroDondeDormir:textoBuscar" approxItemHeight="125px" class="lista">
+        <ion-item *virtualItem="let item; let itemBounds = bounds;">
+            <div class="padre">
+                <div class="imagen">
+                    <ion-avatar item-start>
+                        <ion-img [src]="item.imagen"  class="img-elem"></ion-img>
+                    </ion-avatar>
+                </div>
+                <div class="info">
+                    <ion-label>
+                        <h2>{{ item.nombre }}</h2>
+                        <div class="infoAbajo">
+                            <h3>{{ item.direccion }}</h3>
+                            <p><span>Tel: </span>{{ item.telefono }}</p>
+                        </div>
+                    </ion-label>
+                </div>
+            </div>
         </ion-item>
-    </ion-list>
+    </ion-virtual-scroll>
 </ion-content>
