--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -98,6 +98,7 @@ ion-title {
     margin: 2% 0 2% 0;
     font-weight: 400;
     color: #00dea5;
+    height: 3%;
 }
 
 .infoSug {
@@ -270,5 +271,45 @@ ion-title {
 
     .iconAuto {
         margin: 2% 2% 0 0;
+    }
+}
+
+@media only screen and (min-height: 600px) and (max-height: 736px) {
+    .diva {
+        width: 100%;
+        height: 32%;
+    }
+
+    .divb {
+        width: 100%;
+        height: 13%;
+        margin-top: 0.5%;
+    }
+
+    .interes {
+        margin: 2% 0 2% 0;
+        font-weight: 400;
+        color: #00dea5;
+        height: 5%;
+    }
+}
+
+@media only screen and (min-height: 737px) and (max-height: 980px) {
+    .diva {
+        width: 100%;
+        height: 33%;
+    }
+
+    .divb {
+        width: 100%;
+        height: 14%;
+        margin-top: 0.5%;
+    }
+
+    .interes {
+        margin: 2% 0 0 0;
+        font-weight: 400;
+        color: #00dea5;
+        height: 5%;
     }
 }
