--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -95,7 +95,7 @@ ion-title {
 }
 
 .interes {
-    margin: 2% 0 2% 0;
+    margin: 3% 0 3% 0;
     font-weight: 400;
     color: #00dea5;
     height: 3%;
@@ -207,7 +207,7 @@ ion-title {
 
 @media only screen and (min-height: 1024px) {
     .interes {
-        margin: 6% 0 6% 0;
+        margin: 4% 0 4% 0;
         font-weight: 400;
         color: #00dea5;
         font-size: 32px;
@@ -262,6 +262,11 @@ ion-title {
         margin: 3% 2% 0 0;
         font-size: 25px;
     }
+
+    .diva{
+        width: 100%;
+        height: 34%;
+    }
 }
 
 @media only screen and (min-height: 1366px) {
@@ -272,6 +277,17 @@ ion-title {
     .iconAuto {
         margin: 2% 2% 0 0;
     }
+
+    .diva{
+        width: 100%;
+        height: 35%;
+    }
+
+    .divb {
+        width: 100%;
+        height: 15%;
+        margin-top: 0.5%;
+    }    
 }
 
 @media only screen and (min-height: 600px) and (max-height: 736px) {
