solucinando error gelocation linea 104, posicion era null

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,9 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>map</ion-title>
+    <ion-buttons slot="start">
+            <ion-back-button ></ion-back-button>
+    </ion-buttons>
+    <ion-title>Mapa</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <p>{{argumentos}}</p>
+  <div class="divd">
+    <div id="mapaBox"></div>
+  </div>
 </ion-content>
