--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -67,20 +67,21 @@ ion-label {
 
 .menu {
     margin: 3% 7% 3% 7%;
-    height: 10%;
+    height: 7%;
+    //border: 1px solid black;
 }
+
 
 .icono {
     .iconMenu {
         ion-img {
-            height: 80%;
+            height: 100%;
         }
     }
 }
 
 .cards {
-    height: 36%;
-    margin-bottom: 3%;
+    height: 42%;
     //border: 1px solid black;
 }
 
@@ -106,8 +107,8 @@ ion-label {
 .cpadre {
     height: 100%;
     width: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 8%;
+    margin-right: 8%;
     display: flex;
     flex-direction: column;
     justify-content: center;
